src/styles/index.css
/* Settings */
:root {
  /* (b)reakpoints */
  --b-xsm: 18.75rem;
  --b-sm: 40rem;
  --b-med: 55rem;
  --b-lg: 112rem;

  /* (c)olors */
  --c-accent: rgba(242, 230, 222, 1);
  --c-accent-shadow: rgba(222, 210, 200, 1);
  --c-neutral-dark: rgba(41, 26, 16, 1);
  --c-neutral-light: rgba(253, 251, 250, 1);
  --c-monogram-bg: rgba(190, 190, 190, 1);
  --c-monogram-accent: rgba(205, 175, 96, 1);
  --c-monogram-highlight: rgba(218, 194, 138, 1);

  /* (d)imensions */
  --d-header-height: calc(55px + (1rem * 2)); /* i.e., logo height + header padding */
  --d-header-padding: calc(1rem * 2);
  --d-logo-height: 55px;
  --d-nav-height: 145px;

  /* (s)pacing */
  --s-med: 1rem;
  --s-sm: 0.5rem;
  --s-lg: 2rem;
  --s-xl: 5rem;

  /* other */
  --accent-font: 'Calligraffitti', sans-serif;
}

/* Tools */

@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

/* Generics */

body {
  background-color: var(--c-neutral-light);
  font-family: "Open Sans Variable", sans-serif;
  margin: 0;
  min-width: var(--b-xsm);
  width: 100%;
}

/* Elements */
button {
  background-color: transparent;
  color: inherit;
  border: none;
  margin: 0;
  padding: 0;
  text-align: inherit;
  font: inherit;
  border-radius: 0;
  appearance: none;
}

ol, ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

/* Objects */

/* Components */

.width-container {
  max-width: 80rem;
  margin-inline: auto;
}

.header-background {
  background: var(--c-neutral-light);
  background: linear-gradient(
    180deg, var(--c-accent) 0%,
    var(--c-neutral-light) var(--d-header-height),
    rgba(255,255,255,0) calc(var(--d-header-height) + 1px)
    );
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 99;
}

.header {
  align-items: center;
  display: grid;
  grid-template-areas: "logo toggle" "nav nav";
  justify-content: space-between;
  justify-items: center;
  padding: var(--s-sm);
}

.header__link {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-self: start;
}

.header__link:link,
.header__link:visited {
  color: var(--c-neutral-dark);
  text-decoration: none;
  font-weight: bold;
}

.header__link:active {
  color: var(--c-accent);
}

.header__icon {
  padding-inline-end: var(--s-sm);
}

.nav {
  animation-name: fadein;
  animation-duration: 1s;
  animation-iteration-count: 1;
  background: rgba(255, 255, 255, 0.9);
  grid-column: 1 / 3;
  width: calc(100% + var(--d-header-padding));
  margin-block-end: calc(var(--d-nav-height) * -1);
}

.nav--closed {
  display: none;
}

.nav-links {
  align-items: center;
  display: flex;
  flex-direction: column;
  text-align: center;
  text-transform: uppercase;
}

.nav-links__wrapper {
  border-bottom: 1px solid var(--c-accent);
  width: 100%;
}

.nav-links__wrapper:first-child {
  border-top: 1px solid var(--c-accent);
}

.nav-links__link {
  display: inline-block;
  padding-block: calc(var(--s-med) * 0.75);
  width: 100%;
}

.link:link,
.link:visited {
  color: var(--c-neutral-dark);
  font-weight: bold;
  text-decoration: underline;
  text-decoration-color: var(--c-monogram-accent);
  text-decoration-thickness: 0.25rem;
}

.link:hover,
.link:active {
  text-decoration-color: var(--c-accent);
  transition: text-decoration-color 0.5s;
}

.link:active {
  color: var(--c-accent);
}

.content {
  padding-inline: var(--s-sm);
}

.section {
  padding-block: var(--d-header-height);
}

.section-background:nth-child(even) {
  background-image: url('/background-dots.png');
  background-repeat: space;
}

.section__heading {
  font-family: var(--accent-font);
  margin-block-start: 0;
  text-decoration: underline;
  text-decoration-color: var(--c-monogram-bg);
  text-decoration-style: solid;
  text-decoration-thickness: 0.25rem;
}

.section > p {
  margin-block-end: 0;
}

.intro {
  padding-block: 38vh;
}

.intro__heading {
  animation-duration: 3s;
  animation-name: fadein;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  font-family: var(--accent-font);
  font-size: clamp(2rem, 0.2353rem + 9.4118vw, 4rem);
}

.intro__heading,
.intro__descr {
  margin-block: 0;
}

.intro__cta {
  display: block;
  margin-block-start: var(--s-med);
}

.link-button {
  border: 1px solid var(--c-neutral-dark);
  border-radius: 2rem;
  font-weight: bold;
  padding: var(--s-sm);
  width: fit-content;
  transition: all 0.5s;
}

.link-button:link,
.link-button:visited {
  background: var(--c-accent);
  box-shadow: inset -0.25rem -0.25rem var(--c-accent-shadow);
  color: var(--c-neutral-dark);
  text-decoration: none;
}

.link-button:hover {
  background: var(--c-monogram-accent);
  box-shadow: inset 0.25rem 0.25rem var(--c-monogram-highlight);
  color: var(--c-neutral-light);
  text-decoration: none;
}

.link-button:active {
  color: var(--c-neutral-dark);
}

.external-link:after {
  background-image: url('/svg/externalLink.svg');
  background-size: 0.75rem 0.75rem;
  content: '';
  position: absolute;
  margin-inline-start: calc(var(--s-sm) / 3);
  width: 0.75rem;
  height: 0.75rem;
}

.project {
  margin-block-end: var(--s-xl);
}

.project__image-wrapper {
  margin-inline: 0;
}

.project__image {
  max-width: 25rem;
  width: 100%;
}

.project__subheading {
  margin-block-end: 0;
}

.project__subheading:after {
  content: ':'
}

.project__links > a:nth-child(2) {
  margin-inline-start: var(--s-sm);
}

.techstack {
  margin-block-end: var(--s-med);
}

.techstack__tech {
  --border-radius: 0.5rem;

  background: white;
  display: inline-block;
  border: 1px solid var(--c-accent);
  border-radius: var(--border-radius);
  width: fit-content;
  padding: calc(0.5 * var(--border-radius));
  margin: calc(0.25 * var(--border-radius));
}

#contact {
  text-align: center;
}

.social-media__container {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
	justify-content: space-between;
  margin: var(--s-med) auto;
  max-width: var(--b-sm);
}

.social-media__link {
  border-color: transparent;
}

.social-media__link:hover {
  border-bottom: 3px solid var(--c-monogram-bg);
  transition: border-color 0.5s;
}

.footer {
  text-align: center;
  margin-block: var(--s-lg);
}

.footer > p {
  margin-block: 0;
}

@media (min-width: 40rem) {
  .header {
    grid-template-areas: "logo nav";
    grid-template-columns: 4fr 6fr;
    padding-inline: var(--s-med)
  }

  .header__toggle {
    display: none;
  }

  .nav {
    background: unset;
    grid-column: unset;
    margin-block-end: unset;
    width: 90%;
  }

  .nav--closed {
    display: unset;
  }

  .nav-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .nav-links__wrapper {
    border: 0px;
    width: unset;
  }

  .nav-links__wrapper:first-child {
    border: 0px;
  }

  .nav-links__link {
    display: unset;
    padding-block: unset;
    width: unset;
  }

  .content {
    padding-inline: var(--s-med);
  }

  .project {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-column-gap: 1rem;
  }

  .project__image-wrapper {
    grid-column: 2;
    grid-row: 1/4;
    align-self: center;
  }

  .project__links {
    grid-column: 2;
    grid-row: 4;
  }
}

@media (min-width: 55rem) {
  .header {
    padding-inline: var(--s-lg);
  }

  .nav-links {
    justify-content: end;
  }

  .nav-links__wrapper {
    padding-inline: var(--s-lg);
  }

  .content {
    padding-inline: var(--s-lg);
  }

  .intro {
    text-align: center;
  }

  .intro__cta {
    margin-inline: auto;
  }

  .project {
    grid-column-gap: var(--s-xl)
  }
}

/* Utilities */

